// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppList should disable buttons and display "Installing..." button text while installing an app 1`] = `
<body>
  <div>
    <div />
    <div
      class="with-scrollbar filter-adjusted-height"
    >
      <div
        class="content-container"
      >
        <div
          class="list-group-item"
        >
          <div
            class="tw-flex tw-flex-row tw-flex-wrap tw-flex-nowrap tw-py-1"
          >
            <div
              class="tw-w-auto tw-flex-none tw-my-2 tw-mr-4 tw-flex tw-items-start"
            >
              <div
                class="core-app-icon"
              >
                <img
                  alt=""
                  draggable="false"
                  src="uninstalled.png"
                />
              </div>
            </div>
            <div
              class="tw-flex-1 tw-w-full tw-flex-initial"
            >
              <div>
                Uninstalled Uninstalled Test App
              </div>
              <div
                class="tw-text-sm tw-text-gray-600"
              >
                The uninstalled uninstalled test app
              </div>
              <div
                class="tw-text-sm tw-text-gray-200"
              >
                official
                , v
                7.8.9
              </div>
            </div>
            <div
              class="tw-w-auto tw-flex-none tw-px-4 tw-my-4 tw-ml-auto tw-flex tw-items-center tw-pr-0"
            >
              <div
                class="wide-btns btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-outline-secondary"
                  disabled=""
                  title="Install Uninstalled Uninstalled Test App"
                  type="button"
                >
                  Installing...
                </button>
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown-toggle btn btn-outline-secondary"
                    type="button"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="progress"
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="0"
              class="progress-bar"
              role="progressbar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
    </div>
    <div />
  </div>
</body>
`;

exports[`AppList should disable buttons and display "Updating..." while updating an app 1`] = `
<body>
  <div>
    <div />
    <div
      class="with-scrollbar filter-adjusted-height"
    >
      <div
        class="content-container"
      >
        <div
          class="list-group-item"
        >
          <div
            class="tw-flex tw-flex-row tw-flex-wrap tw-flex-nowrap tw-py-1"
          >
            <div
              class="tw-w-auto tw-flex-none tw-my-2 tw-mr-4 tw-flex tw-items-start"
            >
              <div
                class="core-app-icon"
              >
                <img
                  alt=""
                  draggable="false"
                  src="updatable.png"
                />
              </div>
            </div>
            <div
              class="tw-flex-1 tw-w-full tw-flex-initial"
            >
              <div>
                Downloadable Updatable Test App
              </div>
              <div
                class="tw-text-sm tw-text-gray-600"
              >
                The downloadable updatable test app
              </div>
              <div
                class="tw-text-sm tw-text-gray-200"
              >
                official
                , v
                1.2.3
                 (v
                1.2.4
                 available)
              </div>
            </div>
            <div
              class="tw-w-auto tw-flex-none tw-px-4 tw-my-4 tw-ml-auto tw-flex tw-items-center tw-pr-0"
            >
              <div
                class="wide-btns btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-outline-primary"
                  disabled=""
                  title="Update Downloadable Updatable Test App"
                  type="button"
                >
                  Updating...
                </button>
                <button
                  class="btn btn-primary"
                  disabled=""
                  title="Open Downloadable Updatable Test App"
                  type="button"
                >
                  Open
                </button>
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown-toggle btn btn-outline-primary"
                    type="button"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="progress"
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="0"
              class="progress-bar"
              role="progressbar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
    </div>
    <div />
  </div>
</body>
`;

exports[`AppList should disable buttons while removing an app 1`] = `
<body>
  <div>
    <div />
    <div
      class="with-scrollbar filter-adjusted-height"
    >
      <div
        class="content-container"
      >
        <div
          class="list-group-item"
        >
          <div
            class="tw-flex tw-flex-row tw-flex-wrap tw-flex-nowrap tw-py-1"
          >
            <div
              class="tw-w-auto tw-flex-none tw-my-2 tw-mr-4 tw-flex tw-items-start"
            >
              <div
                class="core-app-icon"
              >
                <img
                  alt=""
                  draggable="false"
                  src="installed.png"
                />
              </div>
            </div>
            <div
              class="tw-flex-1 tw-w-full tw-flex-initial"
            >
              <div>
                Downloadable Installed Test App
              </div>
              <div
                class="tw-text-sm tw-text-gray-600"
              >
                The downloadable installed test app
              </div>
              <div
                class="tw-text-sm tw-text-gray-200"
              >
                official
                , v
                4.5.6
              </div>
            </div>
            <div
              class="tw-w-auto tw-flex-none tw-px-4 tw-my-4 tw-ml-auto tw-flex tw-items-center tw-pr-0"
            >
              <div
                class="wide-btns btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-primary"
                  disabled=""
                  title="Open Downloadable Installed Test App"
                  type="button"
                >
                  Open
                </button>
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown-toggle btn btn-outline-primary"
                    type="button"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="progress"
          >
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="0"
              class="progress-bar"
              role="progressbar"
              style="width: 0%;"
            />
          </div>
        </div>
      </div>
    </div>
    <div />
  </div>
</body>
`;

exports[`AppList should render a message without any apps after some time 1`] = `
<body>
  <div>
    <div />
    <div
      class="tw-preflight tw-grid tw-flex-1 tw-place-items-center"
    >
      <div
        class="tw-text-center"
      >
        <p>
          The list of apps is not yet loaded from
           
          <a
            class="tw-preflight tw-text-nordicBlue hover:tw-underline"
            href="https://files.nordicsemi.com"
            rel="noreferrer noopener"
            target="_blank"
          >
            https://files.nordicsemi.com
          </a>
          .
        </p>
        <p>
          Make sure you can reach that server.
        </p>
      </div>
    </div>
    <div />
  </div>
</body>
`;

exports[`AppList should render local, not-installed, installed, and updatable apps 1`] = `
<body>
  <div>
    <div />
    <div
      class="with-scrollbar filter-adjusted-height"
    >
      <div
        class="content-container"
      >
        <div
          class="list-group-item"
        >
          <div
            class="tw-flex tw-flex-row tw-flex-wrap tw-flex-nowrap tw-py-1"
          >
            <div
              class="tw-w-auto tw-flex-none tw-my-2 tw-mr-4 tw-flex tw-items-start"
            >
              <div
                class="core-app-icon"
              >
                <img
                  alt=""
                  draggable="false"
                  src="installed.png"
                />
              </div>
            </div>
            <div
              class="tw-flex-1 tw-w-full tw-flex-initial"
            >
              <div>
                Downloadable Installed Test App
              </div>
              <div
                class="tw-text-sm tw-text-gray-600"
              >
                The downloadable installed test app
              </div>
              <div
                class="tw-text-sm tw-text-gray-200"
              >
                official
                , v
                4.5.6
              </div>
            </div>
            <div
              class="tw-w-auto tw-flex-none tw-px-4 tw-my-4 tw-ml-auto tw-flex tw-items-center tw-pr-0"
            >
              <div
                class="wide-btns btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-primary"
                  title="Open Downloadable Installed Test App"
                  type="button"
                >
                  Open
                </button>
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown-toggle btn btn-outline-primary"
                    type="button"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="list-group-item"
        >
          <div
            class="tw-flex tw-flex-row tw-flex-wrap tw-flex-nowrap tw-py-1"
          >
            <div
              class="tw-w-auto tw-flex-none tw-my-2 tw-mr-4 tw-flex tw-items-start"
            >
              <div
                class="core-app-icon"
              >
                <img
                  alt=""
                  draggable="false"
                  src="updatable.png"
                />
              </div>
            </div>
            <div
              class="tw-flex-1 tw-w-full tw-flex-initial"
            >
              <div>
                Downloadable Updatable Test App
              </div>
              <div
                class="tw-text-sm tw-text-gray-600"
              >
                The downloadable updatable test app
              </div>
              <div
                class="tw-text-sm tw-text-gray-200"
              >
                official
                , v
                1.2.3
                 (v
                1.2.4
                 available)
              </div>
            </div>
            <div
              class="tw-w-auto tw-flex-none tw-px-4 tw-my-4 tw-ml-auto tw-flex tw-items-center tw-pr-0"
            >
              <div
                class="wide-btns btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-outline-primary"
                  title="Update Downloadable Updatable Test App"
                  type="button"
                >
                  Update
                </button>
                <button
                  class="btn btn-primary"
                  title="Open Downloadable Updatable Test App"
                  type="button"
                >
                  Open
                </button>
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown-toggle btn btn-outline-primary"
                    type="button"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="list-group-item"
        >
          <div
            class="tw-flex tw-flex-row tw-flex-wrap tw-flex-nowrap tw-py-1"
          >
            <div
              class="tw-w-auto tw-flex-none tw-my-2 tw-mr-4 tw-flex tw-items-start"
            >
              <div
                class="core-app-icon"
              >
                <img
                  alt=""
                  draggable="false"
                  src="dummy.png"
                />
              </div>
            </div>
            <div
              class="tw-flex-1 tw-w-full tw-flex-initial"
            >
              <div>
                Local Dummy Test App
              </div>
              <div
                class="tw-text-sm tw-text-gray-600"
              >
                The local dummy test app
              </div>
              <div
                class="tw-text-sm tw-text-gray-200"
              >
                local
                , v
                1.2.3
              </div>
            </div>
            <div
              class="tw-w-auto tw-flex-none tw-px-4 tw-my-4 tw-ml-auto tw-flex tw-items-center tw-pr-0"
            >
              <div
                class="wide-btns btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-primary"
                  title="Open Local Dummy Test App"
                  type="button"
                >
                  Open
                </button>
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown-toggle btn btn-outline-primary"
                    type="button"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="list-group-item"
        >
          <div
            class="tw-flex tw-flex-row tw-flex-wrap tw-flex-nowrap tw-py-1"
          >
            <div
              class="tw-w-auto tw-flex-none tw-my-2 tw-mr-4 tw-flex tw-items-start"
            >
              <div
                class="core-app-icon"
              >
                <img
                  alt=""
                  draggable="false"
                  src="uninstalled.png"
                />
              </div>
            </div>
            <div
              class="tw-flex-1 tw-w-full tw-flex-initial"
            >
              <div>
                Uninstalled Uninstalled Test App
              </div>
              <div
                class="tw-text-sm tw-text-gray-600"
              >
                The uninstalled uninstalled test app
              </div>
              <div
                class="tw-text-sm tw-text-gray-200"
              >
                official
                , v
                7.8.9
              </div>
            </div>
            <div
              class="tw-w-auto tw-flex-none tw-px-4 tw-my-4 tw-ml-auto tw-flex tw-items-center tw-pr-0"
            >
              <div
                class="wide-btns btn-toolbar"
                role="toolbar"
              >
                <button
                  class="btn btn-outline-secondary"
                  title="Install Uninstalled Uninstalled Test App"
                  type="button"
                >
                  Install
                </button>
                <div
                  class="dropdown"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="dropdown-toggle btn btn-outline-secondary"
                    type="button"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div />
  </div>
</body>
`;

exports[`AppList should render with all apps filtered out 1`] = `
<body>
  <div>
    <div />
    <div
      class="tw-preflight tw-grid tw-flex-1 tw-place-items-center"
    >
      <div
        class="tw-text-center"
      >
        <p>
          No apps shown because of the selected filters.
        </p>
        <p>
          Change those to display apps again.
        </p>
      </div>
    </div>
    <div />
  </div>
</body>
`;

exports[`AppList should render without any apps and disabled update check 1`] = `
<body>
  <div>
    <div />
    <div
      class="tw-preflight tw-grid tw-flex-1 tw-place-items-center"
    >
      <div
        class="tw-text-center"
      >
        <p>
          No apps are loaded from the server yet.
        </p>
        <p>
          You have “Check for updates at startup” disabled in the settings.
        </p>
        <p>
          You can enable it there or now just
           
          <button
            class="tw-inline tw-border-0 tw-p-0 tw-text-primary"
            type="button"
          >
            check once for updates
          </button>
          .
        </p>
      </div>
    </div>
    <div />
  </div>
</body>
`;

exports[`AppList should render without any apps initially empty 1`] = `
<body>
  <div>
    <div />
    <div />
  </div>
</body>
`;
